crates/oxc_react_compiler/tests/snapshots/useMemo-inverted-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-inverted-if.js
---
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	let t0;
	bb0: {
		bb1: {
			if (props.cond) {
				break bb1;
			}
			t0 = props.a;
			break bb0;
		}
		t0 = props.b;
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
