crates/oxc_react_compiler/tests/snapshots/useMemo-labeled-statement-unconditional-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-labeled-statement-unconditional-return.js
---
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	const x = props.value;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
