crates/oxc_react_compiler/tests/snapshots/useMemo-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-logical.js
---
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	const x = props.a && props.b;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
