crates/oxc_react_compiler/tests/snapshots/useMemo-mabye-modified-free-variable-dont-preserve-memoization-guarantees.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-mabye-modified-free-variable-dont-preserve-memoization-guarantees.js
---
// @enablePreserveExistingMemoizationGuarantees:false @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
import { identity, makeObject_Primitives, mutate, useHook } from "shared-runtime";
function Component(props) {
	const free = makeObject_Primitives();
	const free2 = makeObject_Primitives();
	const part = free2.part;
	useHook();
	const x = makeObject_Primitives();
	x.value = props.value;
	mutate(x, free, part);
	const object = x;
	identity(free);
	identity(part);
	return object;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
