crates/oxc_react_compiler/tests/snapshots/useMemo-mabye-modified-free-variable-preserve-memoization-guarantees.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-mabye-modified-free-variable-preserve-memoization-guarantees.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity, makeObject_Primitives, mutate, useHook } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeObject_Primitives();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const free = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = makeObject_Primitives();
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const free2 = t1;
	const part = free2.part;
	useHook();
	let x;
	if ($[2] !== props.value) {
		x = makeObject_Primitives();
		x.value = props.value;
		mutate(x, free, part);
		$[2] = props.value;
		$[3] = x;
	} else {
		x = $[3];
	}
	const object = x;
	identity(free);
	identity(part);
	return object;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
