crates/oxc_react_compiler/tests/snapshots/useMemo-maybe-modified-later-preserve-memoization-guarantees.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-maybe-modified-later-preserve-memoization-guarantees.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity, makeObject_Primitives, mutate } from "shared-runtime";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeObject_Primitives();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const object = t0;
	identity(object);
	return object;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
