crates/oxc_react_compiler/tests/snapshots/useMemo-named-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-named-function.ts
---
import { c as _c } from "react/compiler-runtime";
// @validateNoSetStateInRender:false @enablePreserveExistingMemoizationGuarantees:false
import { useMemo } from "react";
import { makeArray } from "shared-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makeArray();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
